--- a/produtos.html
+++ b/produtos.html
@@ -17,69 +17,83 @@
         <h1>Catalogo de Produtos</h1>
     </header>
     <main>
-        <section>
+        <!--Cafés-->>
+        <section><!--Cafés Quentes-->
             <h1>Cafés</h1>
-
+            <h2>Cafés Quente</h2>
             <article>
-                <h2>Cafés Quente</h2>
+                <h1>Café Preto</h1>
                 <div>
-                    <h1>Café Preto</h1>
                     <img src="imagens/produtos/cafe/cafe-preto.jpg" alt="xícara com café">
                     <p>
                         Um café simples servido em uma xícara.
                     </p>
                     <p class="preco">R$04,23</p>
                 </div>
+            </article>
+            <article>
+                <h1>Café Latte</h1>
                 <div>
-                    <h1>Café Latte</h1>
                     <img src="imagens/produtos/cafe/cafe-latte.jpg" alt="xícara com café com leite">
                     <p>
                         Café com um generosa camada de leite.
                     </p>
                     <p class="preco">R$06,10</p>
                 </div>
+            </article>
+            <article>
+                <h1>Americano</h1>
                 <div>
-                    <h1>Americano</h1>
                     <img src="imagens/produtos/cafe/cafe-americano.jpg" alt="xícara com café espresso do tipo Americano.">
                     <p>
                         Café espresso com o preparo Americano.
                     </p>
                     <p class="preco">R$07,25</p>
                 </div>
+            </article>
+            <article>
+                <h1>Cappuccino</h1>
                 <div>
-                    <h1>Cappuccino</h1>
                     <img src="imagens/produtos/cafe/cappuccino.jpg" alt="xícara com café espresso com uma camada de espuma de leite">
                     <p>
                         Um cappuccino com uma bela camada de leite
                     </p>
                     <p class="preco">R$08,50</p>
                 </div>
+            </article>
+            <article>
+                <h1>Espresso</h1>
                 <div>
-                    <h1>Espresso</h1>
                     <img src="imagens/produtos/cafe/cafe-espresso.jpg" alt="xícara com café espresso">
                     <p>
                         Café espresso servido em uma xícara.
                     </p>
                     <p class="preco">R$07,25</p>
                 </div>
+            </article>
+            <article>
+                <h1>Cortado</h1>
                 <div>
-                    <h1>Cortado</h1>
                     <img src="imagens/produtos/cafe/cafe-cortado.jpg" alt="xícara com metade café e metade leite">
                     <p>
                         Xícara de metade espresso e metade leite.
                     </p>
                     <p class="preco">R$10,75</p>
                 </div>
+            </article>
+            <article>
+                <h1>Red Eye</h1>
                 <div>
-                    <h1>Red Eye</h1>
                     <img src="imagens/produtos/cafe/red-eye.jpg" alt="café red eye">
                     <p>
                         Café espresso misturado com café de filtro.
                     </p>
                     <p class="preco">R$07,75</p>
                 </div>
+            </article>
+            <article>
+                <h1>Macchiato</h1>
                 <div>
-                    <h1>Macchiato</h1>
                     <img src="imagens/produtos/cafe/macchiato.jpg" alt="Café Macchiato">
                     <p>
                         Macchiato com creme de leite suave.
@@ -87,59 +101,74 @@
                     <p class="preco">R$10,50</p>
                 </div>
             </article>
+        </section>
+
+        <section><!--Cafés Frios-->
+            <h2>Cafés Frio</h2>
 
             <article>
-                <h2>Cafés Frio</h2>
+                <h1>Cold Brew</h1>
                 <div>
-                    <h1>Cold Brew</h1>
                     <img src="imagens/produtos/cafe/cold-brew.jpg" alt="Café feito com água em temperatura ambiente">
                     <p>
                         feito com água em temperatura ambiente.
                     </p>
                     <p class="preco">R$15,50</p>
                 </div>
+            </article>
+            <article>
+                <h1>Affogato</h1>
                 <div>
-                    <h1>Affogato</h1>
                     <img src="imagens/produtos/cafe/affogato.jpg" alt="Café espresso com soverte">
                     <p>
                         Café espresso junto com soverte.
                     </p>
                     <p class="preco">R$18,10</p>
                 </div>
+            </article>
+            <article>
+                <h1>Cold Drip</h1>
                 <div>
-                    <h1>Cold Drip</h1>
                     <img src="imagens/produtos/cafe/cold-drip.jpg" alt="Café do gotejamento de água fria nos grãos">
                     <p>
                         Água fria gotejada sobre o grãos de café.
                     </p>
                     <p class="preco">R$16,50</p>
                 </div>
+            </article>
+            <article>
+                <h1>Nitro Café</h1>
                 <div>
-                    <h1>Nitro Café</h1>
                     <img src="imagens/produtos/cafe/nitro-coffee.jpg" alt="Café frio de textura lisa e espumante">
                     <p>
                         Café frio de textura lisa e espumante.
                     </p>
                     <p class="preco">R$20,00</p>
                 </div>
+            </article>
+            <article>
+                <h1>Café Tonic</h1>
                 <div>
-                    <h1>Café Tonic</h1>
                     <img src="imagens/produtos/cafe/cafe-tonic.jpg" alt="Uma bebida que misturado café, gelo e tônico">
                     <p>
                         Bebida contendo café, gelo e tônico
                     </p>
                     <p class="preco">R$15,40</p>
                 </div>
+            </article>
+            <article>
+                <h1>Ice Latte</h1>
                 <div>
-                    <h1>Ice Latte</h1>
                     <img src="imagens/produtos/cafe/ice-latte.jpg" alt="Café, gelo e leite espumado">
                     <p>
                         Café tradicional com muito gelo e leite espumado.
                     </p>
                     <p class="preco">R$15,40</p>
                 </div>
+            </article>
+            <article>
+                <h1>Ice Cappuccino</h1>
                 <div>
-                    <h1>Cappuccino</h1>
                     <img src="imagens/produtos/cafe/ice-cappuccino.jpg" alt="Cappuccino frio com gelo e espuma de leite">
                     <p>
                         Cappuccino frio, gelo e espuma de leite.
@@ -147,8 +176,29 @@
                     <p class="preco">R$25,40</p>
                 </div>
             </article>
+            <p>Todos os tipos de bebidas oferecidos em xícaras ou copos, que não forem ser consumidos no local, seram entregues em copos descartáveis personalizados.</p>
+        </section>
 
-            <p>Todos os tipos de cafés oferecidos em xícara, em não for consumido no local, seram entregues em copos para café personalizados.</p>
+        <!--Chás-->
+        <section><!--Chás Quentes-->
+            <h1>Chás</h1>
+            <h2>Chás Quente</h2>
+            <article>
+                <h1>Mate limão</h1>
+                <div>
+                    <img src="imagens/produtos/cha/mate-limão.jpg" alt="Copo com chá de mate com limão">
+                    <p>Chá mate misturado com limão.</p>
+                    <p class="preco">R$05,60</p>
+                </div>
+            </article>
+        </section>
+
+        <section><!--Chás Frios-->
+            <article>
+                <h2>Chás Gelado</h2>
+            </article>
+
+            <p>Todos os tipos de bebidas oferecidos em xícaras ou copos, que não forem ser consumidos no local, seram entregues em copos descartáveis personalizados.</p>
         </section>
     </main>
     <footer>
