Opções de comidas

--- a/produtos.html
+++ b/produtos.html
@@ -105,7 +105,6 @@
 
         <section><!--Cafés Frios-->
             <h2>Cafés Frio</h2>
-
             <article>
                 <h1>Cold Brew</h1>
                 <div>
@@ -176,7 +175,6 @@
                     <p class="preco">R$25,40</p>
                 </div>
             </article>
-            <p>Todos os tipos de bebidas oferecidos em xícaras ou copos, que não forem ser consumidos no local, seram entregues em copos descartáveis personalizados.</p>
         </section>
 
         <!--Chás-->
@@ -251,8 +249,128 @@
                     <p class="preco">R$07,20</p>
                 </div>
             </article>
+        </section>
 
-            <p>Todos os tipos de bebidas oferecidos em xícaras ou copos, que não forem ser consumidos no local, seram entregues em copos descartáveis personalizados.</p>
+        <!--Salgados-->
+        <section>
+            <h1>Salgados</h1>
+            <article>
+                <h1>Pão com Manteiga</h1>
+                <div>
+                    <img src="imagens/produtos/salgados/pao-manteiga.jpg" alt="Pão com Manteiga">
+                    <p>Duas fatias de pão com manteiga</p>
+                    <p class="preco">R$05,00</p>
+                </div>
+            </article>
+            <article>
+                <h1>Pão Recheado</h1>
+                <div>
+                    <img src="imagens/produtos/salgados/pao-recheado.jpg" alt="Pão recheado">
+                    <p>Pão recheado com queijo e presunto</p>
+                    <p class="preco">R$08,80</p>
+                </div>
+            </article>
+            <article>
+                <h1>Pão de Queijo</h1>
+                <div>
+                    <img src="imagens/produtos/salgados/pao-queijo.jpg" alt="Cesta contendo pão de queijo">
+                    <p>Cestinha contendo 20 unidade de pão de queijo</p>
+                    <p class="preco">R$15,20</p>
+                </div>
+            </article>
+            <article>
+                <h1>Torta de frango</h1>
+                <div>
+                    <img src="imagens/produtos/salgados/torta-frango.jpg" alt="Fatia de torta sabor frango">
+                    <p>Fatia de torta sabor frango</p>
+                    <p class="preco">R$3,50</p>
+                </div>
+            </article>
+            <article>
+                <h1>Coxinha</h1>
+                <div>
+                    <img src="imagens/produtos/salgados/coxinha.jpg" alt="Prato contendo 3 coxinhas">
+                    <p>Uma unidade de coxinha grande.</p>
+                    <p class="preco">R$3,50</p>
+                </div>
+            </article>
+            <article>
+                <h1>Pastel</h1>
+                <div>
+                    <img src="imagens/produtos/salgados/pastel.jpg" alt="Pastel">
+                    <p>Uma unidade de pastel grande.</p>
+                    <p class="preco">R$4,20</p>
+                </div>
+            </article>
+            <article>
+                <h1>Croissant</h1>
+                <div>
+                    <img src="imagens/produtos/salgados/croissant.jpg" alt="Croissant">
+                    <p>Uma unidade de croissant grande.</p>
+                    <p class="preco">R$6,50</p>
+                </div>
+            </article>
+            <article>
+                <h1>Empada</h1>
+                <div>
+                    <img src="imagens/produtos/salgados/empada.jpg" alt="empada">
+                    <p>Empada recheado com frango.</p>
+                    <p class="preco">R$4,50</p>
+                </div>
+            </article>
+        </section>
+
+        <!--Doces-->
+        <section>
+            <h1>Doces</h1>
+            <article>
+                <h1>Torta de Maçã</h1>
+                <div>
+                    <img src="imagens/produtos/doces/torta-maca.jpg" alt="Fatia de torta de maçã">
+                    <p>Fatia de torta de maçã.</p>
+                    <p class="preco">R$05,00</p>
+                </div>
+            </article>
+            <article>
+                <h1>Torta de Morango</h1>
+                <div>
+                    <img src="imagens/produtos/doces/torta-morango.jpg" alt="Fatia de torta de morango">
+                    <p>Fatia de torta de morango.</p>
+                    <p class="preco">R$05,00</p>
+                </div>
+            </article>
+            <article>
+                <h1>Pudim</h1>
+                <div>
+                    <img src="imagens/produtos/doces/pudim.jpg" alt="Pudim servido em um prato">
+                    <p>Um delicioso pudim.</p>
+                    <p class="preco">R$02,00</p>
+                </div>
+            </article>
+            <article>
+                <h1>Sonho</h1>
+                <div>
+                    <img src="imagens/produtos/doces/sonho.jpg" alt="Sonho de padaria">
+                    <p>Um delicioso sonho.</p>
+                    <p class="preco">R$02,00</p>
+                </div>
+            </article>
+            <article>
+                <h1>Brownie</h1>
+                <div>
+                    <img src="imagens/produtos/doces/brownie.jpg" alt="Brownie: um tipo de bolo de chocolate">
+                    <p>Um delicioso brownie de chocolate.</p>
+                    <p class="preco">R$03,00</p>
+                </div>
+            </article>
+            <article>
+                <h1>Cupcake</h1>
+                <div>
+                    <img src="imagens/produtos/doces/cupcake.jpg" alt="Um cupcake">
+                    <p>Um delicioso cupcake.</p>
+                    <p class="preco">R$02,50</p>
+                </div>
+            </article>
         </section>
     </main>
     <footer>
